# k4dos

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deps.sh  kados.config  kbd  rust-toolchain.toml  setup-externals.sh  testapp.objdump
.cargo/: config.toml  debug.toml  linker.ld  release.toml  runner.sh  runner_debug.sh  runner_kvm.sh  runner_release.sh  x86_64-kados.json
conf/: grub.cfg  limine.cfg  linker.ld
kados_syscall/: Cargo.toml
kados_syscall/.cargo/: config.toml
kados_syscall/src/: consts.rs  lib.rs
src/: backtrace.rs  god_mode.rs  io.rs  logging.rs  main.rs  serial.rs  vga_text.rs
src/arch/: mod.rs
src/arch/x86_64/: boot.S  boot_old.S  cpu_local.rs  gdt.rs  idt.rs  mod.rs  signal.rs  syscall.rs  task.rs  time.rs
src/fs/: mod.rs  null.rs  opened_file.rs  path.rs  pipe.rs  tty.rs
src/fs/devfs/: fb.rs  input.rs  mod.rs  null.rs  socket.rs  tty.rs  urandom.rs
src/fs/initramfs/: dir.rs  file.rs  mod.rs  root.rs  symlink.rs
src/graphics/: mod.rs
src/mem/: addr.rs  addr_space.rs  allocator.rs  consts.rs  mod.rs
src/mem/paging/: mapper.rs  mod.rs  table.rs  units.rs
src/task/: group.rs  mod.rs  scheduler.rs  signal.rs  vmem.rs  wait_queue.rs
src/userland/: buffer.rs  elf.rs  mod.rs
src/userland/syscall/: arch_prctl.rs  execve.rs  exit.rs  fcntl.rs  fork.rs  getcwd.rs  ioctl.rs  mmap.rs  mod.rs  open.rs  pid.rs  pipe.rs  poll.rs  read.rs  rt_sigprocmask.rs  set_tid_address.rs  signal.rs  stat.rs  time.rs  uname.rs  wait4.rs  write.rs  writev.rs
src/userland/syscall/syscall_impl/: fs.rs  mem.rs  mod.rs  signal.rs  sys.rs  task.rs  time.rs
src/util/: ctypes.rs  errno.rs  error.rs  lock.rs  mod.rs  ringbuffer.rs  stack.rs
testapp/: Makefile  main.c  testapp
