[package]
name = "k4dos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "k4dos"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = "0.3.1"
volatile = "0.2.6" # DO NOT CHANGE
spin = "0.9.8"
bit_field = "0.10.2"
x86 = "0.52.0"
x86_64 = "0.15.2"
log = "0.4"
pic8259 = "0.11"
bitflags = "2.6.0"
uart_16550 = "0.3.2"
crossbeam-utils = { version = "0.8.20", default-features = false }
atomic_refcell = "0.1.13"
buddy_system_allocator = { version = "0.11.0", features = [] }
pc-keyboard = "0.8.0"
xmas-elf = "0.8"
rustc-demangle = "0.1.24"
arrayvec = { version = "0.7.6", default-features = false }
x2apic = "0.4.3"
elfloader = "0.16.0"
bitvec = { version = "1.0.1", default-features = false }
embedded-graphics = "0.8.1"
smoltcp = { version = "0.12.0", default-features = false, features = [
    "alloc",
    "proto-ipv4",
    "socket",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
    "proto-dhcpv4",
    "medium-ethernet",
] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[profile.release]
debug = 1
